# eBrowser

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  setup.bat  setup.sh  setup_macos.sh
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  nightly.yml  perf-regression.yml  release-smoke-test.yml  release.yml  video-build.yml  weekly.yml
docs/: architecture.md  platform-guide.md  security-advisory-v2.0.0.md
docs/book/: book.md  references.bib
docs/site/: index.html
enterprise/docker/: Dockerfile  docker-compose.yml
enterprise/docs/: deployment-guide.md
enterprise/helm/: Chart.yaml  values.yaml
fuzz/: CMakeLists.txt  fuzz_css_parser.c  fuzz_firewall.c  fuzz_html_parser.c  fuzz_url_parser.c  fuzz_xss.c
fuzz/corpus/css/: basic.css  complex.css
fuzz/corpus/html/: basic.html  complex.html  edge.html  xss.html
fuzz/corpus/url/: basic.txt
include/: eBrowser
include/ebrowser/: anti_fingerprint.h  bookmark.h  browser.h  cache.h  compat.h  cookies.h  crypto.h  css_parser.h  devtools.h  dns_security.h  dom.h  download.h  extension.h  firewall.h  gpu_renderer.h  html_parser.h  http.h  input.h  js_engine.h  layout.h  logger.h  memory_safety.h  metrics.h  omnibox.h  perf.h  permissions.h  platform.h  plugin.h  privacy.h  reader_mode.h  render.h  sandbox.h  secure_storage.h  security.h  settings_page.h  svg.h  tab_manager.h  theme.h  tls.h  tracker_blocker.h  (+1 more)
installer/windows/: ebrowser-setup.iss
platform/: CMakeLists.txt  platform.c
port/: CMakeLists.txt
port/eos/: main_eos.c
port/sdl2/: main_sdl2.c  platform_open_url.c
port/web/: main_web.c
promo/: generate_audio.py  promo_scene.py
sbom/: ebrowser-2.0.0.cdx.json
src/browser/: CMakeLists.txt  browser.c  omnibox.c  settings_page.c
src/engine/: CMakeLists.txt  css_parser.c  dom.c  gpu_renderer.c  html_parser.c  js_engine.c  layout.c  svg_parser.c
src/extensions/: CMakeLists.txt  extension.c
src/input/: CMakeLists.txt  input.c
src/network/: CMakeLists.txt  cache.c  cookies.c  http.c  url.c
src/perf/: CMakeLists.txt  perf.c
src/plugin/: CMakeLists.txt  plugin.c
src/privacy/: CMakeLists.txt  privacy.c  tracker_blocker.c
src/render/: CMakeLists.txt  render.c
src/security/: CMakeLists.txt  crypto.c  permissions.c  secure_storage.c  security.c  tls.c
src/security/anti_fingerprint/: CMakeLists.txt  anti_fingerprint.c
src/security/dns/: CMakeLists.txt  dns_security.c
src/security/firewall/: CMakeLists.txt  firewall.c
src/security/memory/: CMakeLists.txt  memory_safety.c
src/security/sandbox/: CMakeLists.txt  sandbox.c
src/telemetry/: CMakeLists.txt  logger.c  metrics.c
src/ui/: CMakeLists.txt  bookmark.c  devtools.c  download.c  reader_mode.c  tab_manager.c  theme.c
tests/: CMakeLists.txt  benchmark.c  http2_server.c  load_test.c  load_test_combined.c  perf_regression.c  test_anti_fingerprint.c  test_bookmark.c  test_crypto.c  test_css_parser.c  test_dom.c  test_extension.c  test_firewall.c  test_html_parser.c  test_input.c  test_layout.c  test_memory_safety.c  test_modules.c  test_platform.c  test_privacy.c  test_sandbox.c  test_security.c  test_svg.c  test_tab_manager.c  test_tls.c  test_url.c
