if(eBrowser_PLATFORM_SDL2 AND eBrowser_BUILD_STANDALONE)
    add_executable(eBrowser ${CMAKE_CURRENT_SOURCE_DIR}/sdl2/main_sdl2.c)
    target_link_libraries(eBrowser PRIVATE eBrowser_browser lvgl)
    target_include_directories(eBrowser PRIVATE ${CMAKE_SOURCE_DIR}/include)

    find_package(SDL2 QUIET)
    if(SDL2_FOUND)
        target_link_libraries(eBrowser PRIVATE SDL2::SDL2)
    else()
        find_package(PkgConfig QUIET)
        if(PkgConfig_FOUND)
            pkg_check_modules(SDL2 QUIET sdl2)
            if(SDL2_FOUND)
                target_include_directories(eBrowser PRIVATE ${SDL2_INCLUDE_DIRS})
                target_link_libraries(eBrowser PRIVATE ${SDL2_LIBRARIES})
            endif()
        endif()
        if(NOT SDL2_FOUND)
            find_library(SDL2_LIB NAMES SDL2 sdl2)
            find_path(SDL2_INC NAMES SDL.h PATH_SUFFIXES SDL2)
            if(SDL2_LIB AND SDL2_INC)
                target_include_directories(eBrowser PRIVATE ${SDL2_INC})
                target_link_libraries(eBrowser PRIVATE ${SDL2_LIB})
            else()
                message(WARNING "SDL2 not found — standalone eBrowser will not build with GUI.\n"
                                "Install SDL2: apt install libsdl2-dev | brew install sdl2 | pacman -S mingw-w64-x86_64-SDL2")
            endif()
        endif()
    endif()

    if(WIN32)
        target_link_libraries(eBrowser PRIVATE ws2_32)
    endif()
endif()

if(eBrowser_PLATFORM_EOS)
    add_library(eBrowser_eos STATIC ${CMAKE_CURRENT_SOURCE_DIR}/eos/main_eos.c)
    target_link_libraries(eBrowser_eos PUBLIC eBrowser_browser lvgl)
    target_include_directories(eBrowser_eos PUBLIC ${CMAKE_SOURCE_DIR}/include)
endif()

if(eBrowser_PLATFORM_WEB)
    add_executable(eBrowser_web ${CMAKE_CURRENT_SOURCE_DIR}/web/main_web.c)
    target_link_libraries(eBrowser_web PRIVATE eBrowser_browser lvgl)
    target_include_directories(eBrowser_web PRIVATE ${CMAKE_SOURCE_DIR}/include)
endif()
